[metadata]
name = foo
author = Fabio Zeiser
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.7
include_package_data = True

[options.extras_require]
    tests =
        pytest
